--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
   
   <script type="module" src="./index.js"></script>
+  <script type="module" src="./result.js"></script>
 </body>
 </html>
